[package]
name = "bcrypt"
version = "0.12.0"
authors = ["Vincent Prouillet <hello@prouilletvincent.com>"]
license = "MIT"
readme = "README.md"
description = "Easily hash and verify passwords using bcrypt"
homepage = "https://github.com/Keats/rust-bcrypt"
repository = "https://github.com/Keats/rust-bcrypt"
keywords = ["bcrypt", "password", "web", "hash"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

[features]
default = ["std"]
std = ["getrandom/std", "base64/std"]
alloc = ["base64/alloc"]
js = ["getrandom/js"]

[dependencies]
blowfish = { version = "0.9", features = ["bcrypt"] }
getrandom = "0.2"
base64 = { version = "0.13", default-features = false }
zeroize = "1.5.4"

[dev-dependencies]
quickcheck = "1"

[badges]
maintenance = { status = "passively-maintained" }
