[package]
name = "bcrypt"
version = "0.17.0"
authors = ["Vincent Prouillet <hello@prouilletvincent.com>"]
license = "MIT"
readme = "README.md"
description = "Easily hash and verify passwords using bcrypt"
homepage = "https://github.com/Keats/rust-bcrypt"
repository = "https://github.com/Keats/rust-bcrypt"
keywords = ["bcrypt", "password", "web", "hash"]
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md"]

[features]
default = ["std", "zeroize"]
std = ["getrandom/std", "base64/std"]
alloc = ["base64/alloc", "getrandom"]

[dependencies]
blowfish = { version = "0.9", features = ["bcrypt"] }
getrandom = { version = "0.3", default-features = false, optional = true }
base64 = { version = "0.22", default-features = false }
zeroize = { version = "1.5.4", optional = true }
subtle = { version = "2.4.1", default-features = false }

[dev-dependencies]
# no default features avoid pulling in log
quickcheck = { version = "1", default-features = false }

[badges]
maintenance = { status = "passively-maintained" }
